fix: resolve hardcoded colors breaking dark mode in select and contentHandler

--- a/styles/component/_contentHandler.scss
+++ b/styles/component/_contentHandler.scss
@@ -15,6 +15,6 @@
     }
 
     p {
-        color: colors.$deep-grey-bright;
+        color: var(--sui-content-disabled);
     }
 }
